# hybrid-rag-tech-assistant

./: .gitignore  download_data.py  pyproject.toml  spec.md  start.md  task0.md
chroma_db/: bm25_corpus.pkl
chroma_db/a3588341-07bd-41b5-811f-55a7acafa005/: index_metadata.pickle
results/: eval.csv
src/: chat.py  evaluate.py  ingest.py  query.py
