[project]
name = "interview-blokh-galina"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "pypdf>=4.0.0",
    "chromadb>=0.5.0",
    "pdfplumber>=0.11.0",
    "rank-bm25>=0.2.2",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
]
